<resources>
    <string name="app_name">BebasSumpah</string>
    <string name="app_id">CA894401-8259-DE47-FF3F-6BF089279E00</string>
    <string name="android_key">374D2F06-F78E-88D7-FFDF-0AA6B61F3000</string>
    <string name="action_settings">Settings</string>

    <string name="button_sent">Sent</string>
    <string name="button_compose">Compose</string>
    <string name="button_inbox">Inbox</string>
    <string name="button_send">Send</string>
    <string name="button_login">Login</string>
    <string name="button_submit">Submit</string>

    <string name="checkbox_encrypt">E</string>
    <string name="checkbox_sign">S</string>

    <string name="hint_email_recipient">To</string>
    <string name="hint_email_subject">Subject</string>
    <string name="hint_email_content">Message</string>
    <string name="hint_key">Key</string>

    <string name="hint_login_address">Login Address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
