<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context="com.dancinggrass.prophetaria.bebassumpah.ComposeFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_recipient"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email_recipient"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edit_text_subject"
                    android:inputType="textEmailAddress"
                    android:hint="@string/hint_email_subject"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <CheckBox
                    android:id="@+id/checkbox_encrypt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_encrypt"/>
                <CheckBox
                    android:id="@+id/checkbox_sign"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/checkbox_sign"/>
            </LinearLayout>
            <Button
                style="?android:attr/buttonBarButtonStyle"
                android:id="@+id/button_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/button_send" />
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="top"
            android:layout_weight="1"
            android:id="@+id/edit_text_message"
            android:inputType="textEmailAddress|textMultiLine"
            android:hint="@string/hint_email_content"/>


    </LinearLayout>
</FrameLayout>
